--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.1'
 services:
   db:
+    container_name: 'db'
     image: mysql
     restart: always
     environment:
@@ -10,4 +11,19 @@ services:
       - "9090:3306"
     volumes:
       - ${PWD}/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
-    # command: bash -c "mysql -uroot -proot < db/seed.sql"
+
+  node:
+    container_name: 'app'
+    build:
+      context: .
+      dockerfile: 'Dockerfile'
+    user: "node"
+    volumes:
+      - ./:/home/node/app
+    ports:
+      - "8081:8081"
+    depends_on:
+      - db
+    environment:
+      WAIT_HOSTS: db:3306
+
