--- a/src/config/config.json
+++ b/src/config/config.json
@@ -16,9 +16,10 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "root",
+    "database": "notification_system",
+    "host": "host.docker.internal",
+    "port": "9090",
     "dialect": "mysql"
   }
 }
