--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "RESTful notification system APIs with NodeJs",
   "main": "server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd src & npx sequelize-cli db:migrate & node server.js",
-    "startprod": "cd src && npx sequelize-cli db:migrate --env production && node server.js"
+    "startprod": "cd src && npx sequelize-cli db:migrate --env production && node server.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --maxWorkers=1 --detectOpenHandles",
+    "pretest": "cd src && cross-env NODE_ENV=test npm run db:drop:test && cross-env NODE_ENV=test npm run db:create:test",
+    "db:drop:test": "cd src && cross-env NODE_ENV=test npx sequelize-cli db:drop",
+    "db:create:test": "cd src && cross-env NODE_ENV=test npx sequelize-cli db:create && npx sequelize-cli db:migrate"
   },
   "keywords": [
     "node",
@@ -24,5 +27,17 @@
     "sequelize": "^6.3.5",
     "sequelize-auto": "^0.7.2",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "cross-env": "^7.0.2",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
