--- a/src/config/config.json
+++ b/src/config/config.json
@@ -9,10 +9,12 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "root",
+    "database": "notification_test",
+    "host": "host.docker.internal",
+    "port": "9090",
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "username": "root",
