--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RESTful notification system APIs with NodeJs",
   "main": "server/app.js",
   "scripts": {
-    "start": "cd src & npx sequelize-cli db:migrate & node server.js",
+    "start": "cd src & npx sequelize-cli db:migrate & nodemon server.js",
     "startprod": "cd src && npx sequelize-cli db:migrate --env production && node server.js",
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --maxWorkers=1 --detectOpenHandles",
     "pretest": "cd src && cross-env NODE_ENV=test npm run db:drop:test && cross-env NODE_ENV=test npm run db:create:test",
@@ -26,12 +26,15 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "sequelize-auto": "^0.7.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "swagger-ui-express": "^4.1.5",
+    "swagger-jsdoc": "^5.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "cross-env": "^7.0.2",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
     "supertest": "^6.0.1"
   },
   "jest": {
