--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ${PWD}/.db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
 
-  node:
+  producer:
     container_name: 'producer'
     build:
       context: .
@@ -27,6 +27,17 @@ services:
       - rabbitmq
     environment:
       WAIT_HOSTS: db:3306
+
+  consumer:
+    container_name: 'consumer'
+    build:
+      context: .
+      dockerfile: './consumer/Dockerfile'
+    user: "node"
+    volumes:
+      - ./consumer/:/home/node/app
+    depends_on:
+      - rabbitmq
 
   rabbitmq:
     container_name: 'rabbitmq'
