--- a/producer/src/config/.test.env
+++ b/producer/src/config/.test.env
@@ -3,10 +3,11 @@ SERVER_HOST=localhost
 
 DB_USER=root
 DB_PASS=root
-DB_NAME=notification_system
+DB_NAME=notification_test
 DB_HOST=host.docker.internal
 DB_PORT=9090
 DB_DIALECT=mysql
+DB_LOGGING=false
 
 RMQ_HOST=localhost
 RMQ_QUEUE='notificationsQueue'
