--- a/consumer/package.json
+++ b/consumer/package.json
@@ -15,7 +15,9 @@
     "@superset-ui/translation": "^0.14.23",
     "amqplib": "^0.6.0",
     "dotenv": "^8.2.0",
-    "translate": "^1.1.2"
+    "cross-env": "^7.0.2",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.16",
