--- a/producer/package.json
+++ b/producer/package.json
@@ -30,7 +30,11 @@
     "sequelize-auto": "^0.7.2",
     "sequelize-cli": "^6.2.0",
     "swagger-jsdoc": "^5.0.1",
-    "swagger-ui-express": "^4.1.5"
+    "swagger-ui-express": "^4.1.5",
+    "cross-env": "^7.0.2",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1"
+      
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.16",
