[FEAT] test travis.ci

--- a/producer/src/config/.production.env
+++ b/producer/src/config/.production.env
@@ -4,9 +4,9 @@ SERVER_HOST=localhost
 DB_USER=root
 DB_PASS=root
 DB_NAME=notification_system
-DB_HOST=host.docker.internal
+DB_HOST=localhost
 DB_PORT=9090
 DB_DIALECT=mysql
 
-RMQ_HOST=host.docker.internal
+RMQ_HOST=localhost
 RMQ_QUEUE='notificationsQueue'
