--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "9090:3306"
     volumes:
-      - ${PWD}/.db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+      - ./.db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
 
   producer:
     container_name: 'producer'
