--- a/producer/src/config/config.json
+++ b/producer/src/config/config.json
@@ -11,7 +11,7 @@
     "username": "root",
     "password": "root",
     "database": "notification_test",
-    "host": "host.docker.internal",
+    "host": "localhost",
     "port": "9090",
     "dialect": "mysql",
     "logging": false
@@ -20,7 +20,7 @@
     "username": "root",
     "password": "root",
     "database": "notification_system",
-    "host": "host.docker.internal",
+    "host": "localhost",
     "port": "9090",
     "dialect": "mysql"
   }
