[FEAT] try container name as connection host

--- a/producer/src/config/.production.env
+++ b/producer/src/config/.production.env
@@ -4,9 +4,9 @@ SERVER_HOST=localhost
 DB_USER=root
 DB_PASS=root
 DB_NAME=notification_system
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=9090
 DB_DIALECT=mysql
 
-RMQ_HOST=localhost
+RMQ_HOST=rabbitmq
 RMQ_QUEUE='notificationsQueue'
