--- a/producer/src/config/config.json
+++ b/producer/src/config/config.json
@@ -4,15 +4,15 @@
     "password": "root",
     "database": "notification_system",
     "host": "localhost",
-    "port": "9090",
+    "port": "3306",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "root",
     "database": "notification_test",
-    "host": "db",
-    "port": "9090",
+    "host": "localhost",
+    "port": "3306",
     "dialect": "mysql",
     "logging": false
   },
@@ -21,7 +21,7 @@
     "password": "root",
     "database": "notification_system",
     "host": "db",
-    "port": "9090",
+    "port": "3306",
     "dialect": "mysql"
   }
 }
